Adjusted links to repository move

--- a/index.ipynb
+++ b/index.ipynb
@@ -53,7 +53,7 @@
     "\n",
     "Noch nicht im interaktiven Modus?\n",
     "\n",
-    "- [Interaktive Kursmaterialen starten](http://mybinder.org/repo/uhd-pap/course-deploy)"
+    "- [Interaktive Kursmaterialen starten](https://mybinder.org/v2/gh/nilsleiffischer/python-course/deploy?filepath=index.ipynb)"
    ]
   },
   {
@@ -146,7 +146,7 @@
     "\n",
     "- [Feedback zum Online-Einführungskurs und Python im PAP](https://goo.gl/forms/nvuPvEOCP1CMrp5X2)\n",
     "\n",
-    "Meldet euch außerdem jederzeit bei [Nils Fischer](https://nilsleiffischer.de) (Konzeption und Implementierung des Kurses) oder [Jens Wagner](http://www.physi.uni-heidelberg.de/Einrichtungen/AP/) (Praktikumsleitung) mit Anmerkungen oder Vorschlägen. Der Kurs steht zudem als Open Source [auf GitHub](https://github.com/uhd-pap/course) zur Verfügung."
+    "Meldet euch außerdem jederzeit bei [Nils Fischer](https://nilsleiffischer.de) (Konzeption und Implementierung des Kurses) oder [Jens Wagner](http://www.physi.uni-heidelberg.de/Einrichtungen/AP/) (Praktikumsleitung) mit Anmerkungen oder Vorschlägen. Der Kurs steht zudem als Open Source [auf GitHub](https://github.com/nilsleiffischer/python-course) zur Verfügung."
    ]
   },
   {
