--- a/203 - Fits mit Scipy.ipynb
+++ b/203 - Fits mit Scipy.ipynb
@@ -440,7 +440,7 @@
     "\n",
     "- [Feedback zum Online-Einführungskurs und Python im PAP](https://goo.gl/forms/nvuPvEOCP1CMrp5X2)\n",
     "\n",
-    "Melde dich außerdem jederzeit bei [Nils Fischer](https://nilsleiffischer.de) (Konzeption und Implementierung des Kurses) oder [Jens Wagner](http://www.physi.uni-heidelberg.de/Einrichtungen/AP/) (Praktikumsleitung) mit Anmerkungen oder Vorschlägen. Der Kurs steht zudem als Open Source [auf GitHub](https://github.com/uhd-pap/course) zur Verfügung.\n",
+    "Melde dich außerdem jederzeit bei [Nils Fischer](https://nilsleiffischer.de) (Konzeption und Implementierung des Kurses) oder [Jens Wagner](http://www.physi.uni-heidelberg.de/Einrichtungen/AP/) (Praktikumsleitung) mit Anmerkungen oder Vorschlägen. Der Kurs steht zudem als Open Source [auf GitHub](https://github.com/nilsleiffischer/python-course) zur Verfügung.\n",
     "\n",
     "_Viel Erfolg im Physikalischen Anfängerpraktikum!_\n",
     "\n",
