--- a/setup.ipynb
+++ b/setup.ipynb
@@ -17,7 +17,7 @@
     "\n",
     "Programmiercode ist nur Text. Wir speichern reinen Python Code in `.py` Dateien, doch für wissenschaftliche Anwendungen sind solche Skripte häufig nicht anschaulich genug. Stattdessen verwenden wir [_Jupyter Notebooks_](http://jupyter.org), in denen wir nicht nur Code ausführen sondern auch Text, $\\LaTeX$-Gleichungen, Bilder und mehr hinzufügen können. In diesem Kurs wirst du den Umgang mit Notebooks noch kennenlernen, schließlich sind diese Kursmaterialien selbst Jupyter Notebooks!\n",
     "\n",
-    "Das Jupyter Notebook muss dabei immer auf einen _Kernel_ zurückgreifen können, also eine Python Installation auf dem System. Ihr könnt diesen Kurs daher entweder [online auf den Servern von http://mybinder.org ausführen](http://mybinder.org/repo/uhd-pap/course-deploy), oder offline auf eurem Rechner installieren."
+    "Das Jupyter Notebook muss dabei immer auf einen _Kernel_ zurückgreifen können, also eine Python Installation auf dem System. Ihr könnt diesen Kurs daher entweder [online auf den Servern von https://mybinder.org ausführen](https://mybinder.org/v2/gh/nilsleiffischer/python-course/deploy?filepath=index.ipynb), oder offline auf eurem Rechner installieren."
    ]
   },
   {
@@ -49,7 +49,7 @@
    "source": [
     "## Diesen Kurs herunterladen und ausführen\n",
     "\n",
-    "Möchtet ihr den Kurs offline durchführen, könnt ihr die Notebooks einfach [herunterladen](https://github.com/uhd-pap/course-deploy/archive/master.zip). Startet die Jupyter Notebook App, navigiert in das Kursverzeichnis und öffnet das [`index.ipynb`](index.ipynb) Notebook. Dies ist die Startseite dieses Kurses.\n",
+    "Möchtet ihr den Kurs offline durchführen, könnt ihr die Notebooks einfach [herunterladen](https://github.com/nilsleiffischer/python-course/archive/deploy.zip). Startet die Jupyter Notebook App, navigiert in das Kursverzeichnis und öffnet das [`index.ipynb`](index.ipynb) Notebook. Dies ist die Startseite dieses Kurses.\n",
     "\n",
     "> Wenn ihr nicht die Anaconda Distribution verwendet, stellt sicher, dass ihr die benötigten Packages für diesen Kurs installiert habt. Sie sind in der `requirements.txt` Datei aufgelistet und ihr könnt sie einfach mit `pip` installieren:\n",
     ">\n",
