--- a/102_controlflow.ipynb
+++ b/102_controlflow.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Python Einführungskurs für das Physikalische Anfängerpraktikum der Universität Heidelberg | [Startseite](index.ipynb)\n",
+    "Kurs 6.3 \"Vom Gehirn Lernen\" -- Python-Tutorial  | [Startseite](index.ipynb)\n",
     "\n",
     "---"
    ]
@@ -43,7 +43,7 @@
    "source": [
     "a = 1\n",
     "b = 3.14\n",
-    "c = 'hello'\n",
+    "c = \"hello\"\n",
     "d = [a, b, c]"
    ]
   },
@@ -60,13 +60,13 @@
    "source": [
     "## `if`-Abfragen\n",
     "\n",
-    "Die einfachste Form von _control flow_ ist die `if`-Abfrage. Ein Codeblock wird nur dann ausgeführt, wenn eine Bedingung den `bool`-Wert `True` ergibt. Ein optionaler `else`-Codeblock kann ausgeführt werden, wenn die Bedingung _nicht_ `True` ergibt. Die Syntax für `if`-Abfragen lautet wie folgt:\n",
+    "Die erste Form von _control flow_ ist die `if`-Abfrage. Ein Codeblock wird nur dann ausgeführt, wenn eine Bedingung wahr ist, das heißt den `bool`-Wert `True` ergibt. Ein optionaler `else`-Codeblock kann ausgeführt werden, wenn die Bedingung _nicht_ `True` ergibt. Die Syntax für `if`-Abfragen lautet wie folgt:\n",
     "```python\n",
     "if condition:\n",
     "    # do something\n",
-    "elif condition:\n",
+    "elif condition:  # optional\n",
     "    # do something else\n",
-    "else:\n",
+    "else:  # optional\n",
     "    # do yet something else\n",
     "```\n",
     "Beachtet, dass die Codeblöcke nicht durch Steuerzeichen begrenzt werden. Stattdessen endet die Bedingung lediglich mit einem Doppelpunkt (`:`) und der zugehörige der Codeblock ist **eingerückt**.\n",
@@ -120,41 +120,58 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "1 == 3 # \"gleich\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "1 != 3 # \"ungleich\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "1 > 3 # \"größer\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "3 <= 3.4 # \"kleiner oder gleich\""
+    "1 == 3  # \"gleich\""
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> Die einfachsten Bedingungen sind die expliziten `bool`-Werte `True` und `False`. Beachte, dass `True` und `False` in Python mit großem Anfangsbuchstaben geschrieben werden."
+    "> **Hinweis**: Beachte den Unterscheid zwischen `=` und `==`: `=` ist ein _Zuweisungsoperator_, das heißt, er weist einer Variablen einen konkreten Wert zu. `==` ist ein _Vergleichsoperator_, d.h. er prüft, ob zwei Variablen den gleichen Wert haben und gibt dann `True` oder `False` zurück."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "1 != 3  # \"ungleich\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "1 > 3  # \"größer\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "3 <= 3.4  # \"kleiner oder gleich\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Die einfachsten Bedingungen sind die expliziten `bool`-Werte `True` und `False`. Beachte, dass `True` und `False` in Python mit großem Anfangsbuchstaben geschrieben werden.\n",
+    "> **Hinweis:** Manche dieser Operatoren lassen sich auch auf Felder anwenden (also z.b. Listen oder Strings). Probier es doch mal selber aus!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Probiere zwei gleiche oder ungleiche Strings und schaue was passiert, wenn du == oder != anwendest!"
    ]
   },
   {
@@ -233,17 +250,7 @@
     "T_Raum = 21\n",
     "heating = False\n",
     "### BEGIN SOLUTION\n",
-    "if T == T_Raum:\n",
-    "    print(\"Temperatur bei Raumtemperatur.\")\n",
-    "elif T < T_Raum:\n",
-    "    print(\"zu kalt!\")\n",
-    "elif T > T_Raum:\n",
-    "    print(\"zu warm!\")\n",
-    "heating = T < T_Raum\n",
-    "if heating:\n",
-    "    print(\"Es wird geheizt.\")\n",
-    "else:\n",
-    "    print(\"Heizung ist aus.\")\n",
+    "\n",
     "### END SOLUTION"
    ]
   },
@@ -262,8 +269,9 @@
    },
    "outputs": [],
    "source": [
-    "from nose.tools import assert_equal\n",
-    "assert_equal(heating, T < T_Raum, \"Der Wert von `heating` passt nicht. Setze den Wert nur dann auf `True`, wenn `T < T_R` ist.\")\n",
+    "assert heating == (\n",
+    "    T < T_Raum\n",
+    "), \"Der Wert von `heating` passt nicht. Setze den Wert nur dann auf `True`, wenn `T < T_R` ist.\"\n",
     "print(\"👏 Easy.\")"
    ]
   },
@@ -289,7 +297,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "3 in [ 1, 3, 5 ]"
+    "3 in [1, 3, 5]"
    ]
   },
   {
@@ -345,6 +353,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "> **Kleine Exkursion für Interessierte** (an dieser Stelle aber nicht super wichtig...): Stelle dir vor, du erstellst eine riesengroße Liste in Python. Zum Beispiel bist du Neurowissenschaftler:in und du speicherst fMRI-Experiment-Daten (eine spezielle Form der Hirn-Magnetresonanztomografie) in einer Pythonliste namens `mrt_1`. Dabei kommt eine gigantische Menge an Daten zusammen, nicht selten mehrere Gigabyte. Oft macht es aus in einem Computerprogrmam Sinn, Variablen zu kopieren (in die Liste `mrt_2`, damit wir das Programm besser strukturieren können. Das würde aber bedeuten, dass für jeder neuen Kopie einige GB im Arbeitsspeicher hin- und hergeschoben werden müssen, was lange dauert und zusätzlichen Speicherplatz benötigt. Deshalb ist Python \"schlau\" und erzeugt nur eine neue _Referenz_ für die Variable. D.h. es gibt einen zusätzlichen Variablennamen, der aber auf die selben Seicherzellen der ursprünglichen Liste zeigt. Das bedeutet aber, dass wenn du `mrt_2` änderst, änderst sich natürlich auch `mrt_1`. Manchmal will man aber eine \"richtige\" Kopie eines Objekts erzeugen (im Programmiersprech nennen wir das _deepcopy_), d.h. der Wert einer Variablen wird tatsächlich in andere Speicherzellen kopiert. Z.B., wenn Du die orginalen Rohdaten behalten und auf Kopie einen Filter anwenden willst. Um die beiden Fälle zu unterscheiden (denn einer Variablen sieht man nicht an, ob sie eine Referenz auf eine andere Variable darstellt), braucht man den `is`-Operator.\n",
+    "\n",
+    "**PS:** Dieses Verhalten von Python ist nicht selten Quelle für wundere Bugs, die schwer zu finden sind (frag da mal deine KL... )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## `for`-Schleifen\n"
    ]
   },
@@ -368,7 +385,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for x in [3, 1.2, 'a']:\n",
+    "for x in [3, 1.2, \"a\"]:\n",
     "    print(x)"
    ]
   },
@@ -378,7 +395,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for letter in 'hello':\n",
+    "for letter in \"hello\":\n",
     "    print(letter)"
    ]
   },
@@ -414,14 +431,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#range?"
+    "# range?"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Wir können die Funktion also auch mit den Argumenten `start`, `stop` und (optional) `step` aufrufen:"
+    "Wir können die Funktion also auch mit den Argumenten `start`, `stop` und (optional) `step` aufrufen:\n",
+    "> **Hinweis:** Wie in der Informatik üblich, fängt `range` bei null an zu zählen, wenn nur ein Wert (d.h. der Stoppwert) angegeben wird. Der Stoppwert selber wird nicht  mehr mitgezählt. `range(3)` zählt also 0, 1, 2, was insgesamt drei Iterationen ergibt. Ergibt Sinn, oder? "
    ]
   },
   {
@@ -535,13 +553,12 @@
     "primes = []\n",
     "### BEGIN SOLUTION\n",
     "for n in range(50):\n",
-    "    is_prime = True\n",
-    "    for m in range(2, n):\n",
-    "        if n % m == 0:\n",
-    "            is_prime = False\n",
-    "            break\n",
-    "    if is_prime:\n",
-    "        primes.append(n)\n",
+    "    # Deine Lösung hier\n",
+    "    # kleiner Hinweis: vllt du brauchst eine zweite For-Schleife??\n",
+    "    pass  # `pass` ist ein Platzhalter und sagt Python, dass es einfach nix machen soll.\n",
+    "    # wenn nach einem Doppelpunkt nichts kommt, wirft Python Fehler aus.\n",
+    "    # `pass` ist ganz praktisch, wenn man den Schleifenkopf schon angelegt hat,\n",
+    "    # aber mit der Implementierung noch nicht fertig ist.\n",
     "### END SOLUTION\n",
     "primes"
    ]
@@ -561,14 +578,29 @@
    },
    "outputs": [],
    "source": [
-    "from nose.tools import assert_equal\n",
     "trimmed_primes = primes\n",
-    "for x in [ 0, 1 ]:\n",
+    "for x in [0, 1]:\n",
     "    try:\n",
     "        trimmed_primes.remove(x)\n",
     "    except ValueError:\n",
     "        pass\n",
-    "assert_equal([2, 3, 5, 7, 11, 13, 17, 19, 23, 29, 31, 37, 41, 43, 47], trimmed_primes, \"Die Liste von Primzahlen sollte bei 0, 1 oder 2 beginnen und die Primzahlen bis inkl. 47 enthalten\")\n",
+    "assert [\n",
+    "    2,\n",
+    "    3,\n",
+    "    5,\n",
+    "    7,\n",
+    "    11,\n",
+    "    13,\n",
+    "    17,\n",
+    "    19,\n",
+    "    23,\n",
+    "    29,\n",
+    "    31,\n",
+    "    37,\n",
+    "    41,\n",
+    "    43,\n",
+    "    47,\n",
+    "] == trimmed_primes, \"Die Liste von Primzahlen sollte bei 0, 1 oder 2 beginnen und die Primzahlen bis inkl. 47 enthalten\"\n",
     "print(\"Sehr gut! 🎉🎉🎉\")"
    ]
   },
@@ -626,8 +658,7 @@
    "source": [
     "fib_numbers = [ 0, 1 ]\n",
     "### BEGIN SOLUTION\n",
-    "while fib_numbers[-1] + fib_numbers[-2] < 100:\n",
-    "    fib_numbers.append(fib_numbers[-1] + fib_numbers[-2])\n",
+    "while  # deine Lösung hier!  # noqa\n",
     "### END SOLUTION\n",
     "fib_numbers"
    ]
@@ -647,8 +678,20 @@
    },
    "outputs": [],
    "source": [
-    "from nose.tools import assert_equal\n",
-    "assert_equal([0, 1, 1, 2, 3, 5, 8, 13, 21, 34, 55, 89], fib_numbers, \"Die Liste sollte mit [ 0, 1, 1, 2, ...] beginnen und die Fibonacci-Zahlen bis einschließlich 89 enthalten.\")\n",
+    "assert [\n",
+    "    0,\n",
+    "    1,\n",
+    "    1,\n",
+    "    2,\n",
+    "    3,\n",
+    "    5,\n",
+    "    8,\n",
+    "    13,\n",
+    "    21,\n",
+    "    34,\n",
+    "    55,\n",
+    "    89,\n",
+    "] == fib_numbers, \"Die Liste sollte mit [ 0, 1, 1, 2, ...] beginnen und die Fibonacci-Zahlen bis einschließlich 89 enthalten.\"\n",
     "print(\"👌 Richtig!\")"
    ]
   },
@@ -662,11 +705,27 @@
     "\n",
     "[Startseite](index.ipynb) | [**>> 103 - Funktionen und Module**](103%20-%20Funktionen%20und%20Module.ipynb)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## TODO: Mehr übungsaufgaben für Control-Flow!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -680,9 +739,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
