Removed many typos.

--- a/index.ipynb
+++ b/index.ipynb
@@ -45,15 +45,28 @@
     "\n",
     "## Fangen wir an!\n",
     "\n",
-    "Dieser Kurs besteht aus interaktiven _[Jupyter Notebooks](http://jupyter.org)_. Du schaust gerade auf eines! In einem Notebook kannst du Code ausführen und zusätzlich erklärenden Text, $\\LaTeX$ Gleichungen, Bilder und mehr einfügen. Damit eignen sich Jupyter Notebooks hervorragend für wissenschaftliche Arbeit.\n",
+    "Dieser Kurs besteht aus interaktiven _[Jupyter Notebooks](http://jupyter.org)_. \n",
+    "Du schaust gerade auf eines! \n",
+    "In einem Notebook kannst du Code ausführen und zusätzlich erklärenden Text, $\\LaTeX$ Gleichungen, Bilder und mehr einfügen.\n",
+    "Damit eignen sich Jupyter Notebooks hervorragend für wissenschaftliche Arbeit.\n",
     "\n",
-    "Wenn Du diesen Lurs zum ersten Mal startest, startest du ihn wahrscheinlich auf [EBRAINS](https://wiki.ebrains.eu/bin/view/Collabs/#), wo die komplette Python-Umgebung inklusive Jupyter und allen benötigten Packages schon vorinstalliert sind. Das bedeutet, dass du nichts weiter machen musst, als dieses Tutorial durchzuarbeiten! :)\n",
+    "Wenn du diesen Kurs zum ersten Mal startest, startest du ihn wahrscheinlich auf [EBRAINS](https://wiki.ebrains.eu/bin/view/Collabs/#), wo die komplette Python-Umgebung inklusive Jupyter und allen benötigten Packages schon vorinstalliert sind.\n",
+    "Das bedeutet, dass du nichts weiter machen musst, als dieses Tutorial durchzuarbeiten! :)\n",
     "\n",
-    "Wenn du aber Lust auf mehr Python bekommen hast, und du selbstständig Python auf deinem eigenen PC installlieren möchtest, findest du [hier](setup.ipynb) eine Anleitung dafür. Dies ist aber freiwillig!\n",
+    "Wenn du aber Lust auf mehr Python bekommen hast, und du selbstständig Python auf deinem eigenen PC installieren möchtest, findest du [hier](setup.ipynb) eine Anleitung dafür.\n",
+    "Dies ist aber freiwillig!\n",
+    "Auch während der DSA werden nur auf EBRAINS arbeiten, eine eigene Pythoninstallation ist daher auch für die eigentliche Kursarbeit nicht notwendig.\n",
     "\n",
-    "Ohne weitere Vorbereitung kannst du den Kurs jetzt online absolvieren. Dazu stellen wir das Kursmaterial interaktiv zu Verfügung. Doppelklicke einfach einmal auf diesen Text. Kannst du die Zelle nun bearbeiten? Dann ist alles bereit und Du kannst loslegen. Drücke `<SHIFT> + <ENTER>` und lies einfach weiter.\n",
+    "Ohne weitere Vorbereitung kannst du den Kurs jetzt online absolvieren.\n",
+    "Dazu stellen wir das Kursmaterial interaktiv zur Verfügung.\n",
+    "Doppelklicke einfach einmal auf diesen Text.\n",
+    "Kannst du die Zelle nun bearbeiten?\n",
+    "Dann ist alles bereit und du kannst loslegen.\n",
+    "Drücke `<SHIFT> + <ENTER>` und lies einfach weiter.\n",
     "\n",
-    "**Und ganz wichtig! Wenn Du Fragen hast oder nicht weiter kommst, zögere nicht wende Dich (am besten per Mail oder über den Chat auf myBuB an Deine Kursleitenden.** Sie freuen sich, Dir zu helfen!"
+    "**Und ganz wichtig!\n",
+    "Wenn du Fragen hast oder nicht weiter kommst, zögere nicht und wende dich (am besten per Mail oder über den Chat auf myBuB) an deine Kursleitenden.** \n",
+    "Sie freuen sich, dir zu helfen!"
    ]
   },
   {
@@ -68,17 +81,24 @@
     "\n",
     "## Programmieren in der Wissenschaft\n",
     "\n",
-    "Viele Aufgaben und Probleme, u.a. in der Wissenschaft, können wir an einen Computer auslagern. Doch dieser benötigt eine exakte Anleitung. Die Aufgabe des Programmierers ist, das Problem konzeptionell zu verstehen und in eine Aneinanderreihung von Befehlen zu übersetzen, die ein Computer ausführen kann.\n",
+    "Viele Aufgaben und Probleme, u.a. in der Wissenschaft, können wir an einen Computer auslagern.\n",
+    "Doch dieser benötigt eine exakte Anleitung.\n",
+    "Die Aufgabe des Programmierers ist, das Problem konzeptionell zu verstehen und in eine Aneinanderreihung von Befehlen zu übersetzen, die ein Computer ausführen kann.\n",
     "\n",
     "Gut programmieren zu können heißt nicht einfach nur die Programmiersprache zu kennen oder sehr schnelle Programme zu schreiben, sondern auch:\n",
     "\n",
-    "- ein Problem aufzuteilen bis einzelne Teilprobleme von einem Computer gelöst werden können, und diese wieder zusammenzusetzen\n",
+    "- ein Problem aufzuteilen, bis einzelne Teilprobleme von einem Computer gelöst werden können, und diese wieder zusammenzusetzen\n",
     "- sich passender Tools zu bedienen, wenn diese bereits ein Teilproblem lösen\n",
     "- ein Programm systematisch untersuchen und verstehen zu können, bspw. um Fehler zu finden\n",
     "- Programme zu schreiben, die _schnell genug_ sind, und nicht so schnell wie irgend möglich\n",
     "- Programme zu schreiben, die auch eine andere Person versteht (oder du selbst noch im nächsten Jahr)\n",
     "\n",
-    "> Der letzte Punkt ist gerade in der Wissenschaft unter den Stichwörtern der **Reproduzierbarkeit** und **_open science_** von größter Wichtigkeit. Es bedeutet, dass auch andere deinen Code verstehen und selbst ausführen können und dabei die gleichen Resultate erhalten wie du. Du solltest Code immer mit der Annahme schreiben, dass andere Personen ihn lesen werden. Am Anfang ist es noch nicht soo wichtig, dass du \"den perfekten\" Code schreibst. Wichtig ist viel ein konzeptionelles Verständnis vom Programmieren und speziell von Python. Um die Details kümmern wir und dann während der Akademie."
+    "> Der letzte Punkt ist gerade in der Wissenschaft unter den Stichwörtern der **Reproduzierbarkeit** und **_open science_** von größter Wichtigkeit.\n",
+    "Es bedeutet, dass auch andere deinen Code verstehen und selbst ausführen können und dabei die gleichen Resultate erhalten wie du.\n",
+    "Du solltest Code immer mit der Annahme schreiben, dass andere Personen ihn lesen werden.\n",
+    "Am Anfang ist es noch nicht soo wichtig, dass du \"den perfekten\" Code schreibst.\n",
+    "Wichtig ist viel ein konzeptionelles Verständnis vom Programmieren und speziell von Python.\n",
+    "Um die Details kümmern wir uns dann auf der Akademie."
    ]
   },
   {
@@ -103,12 +123,14 @@
    "source": [
     "## Wie unterscheidet sich Python von anderen Programmiersprachen?\n",
     "\n",
-    "[Python](https://python.org) ist eine _interpretierte_ Programmiersprache, d.h. der Code wird nicht kompiliert bevor er ausgeführt wird. Dadurch ist ein Python-Programm in der Regel langsamer als ein Äquivalentes, das bspw. in C, C++ oder Fortran geschrieben wurde. Warum programmieren wir also in Python?\n",
+    "[Python](https://python.org) ist eine _interpretierte_ Programmiersprache, d.h. der Code wird nicht kompiliert bevor er ausgeführt wird.\n",
+    "Dadurch ist ein Python-Programm in der Regel langsamer als ein äquivalentes Programm, das bspw. in C, C++ oder Fortran geschrieben wurde.\n",
+    "Warum programmieren wir also in Python?\n",
     "\n",
     "- Die Syntax ist so einfach und übersichtlich, dass sich Python Code häufig schon fast wie Englisch liest.\n",
-    "- Es kann sehr viel schneller gehen ein Python Programm zu schreiben, das tut was man erwartet, als in vielen anderen Sprachen.\n",
-    "- Ein Python Programm kann recht einfach externen Code in anderen Sprachen aufrufen, sodass rechenintensive Operationen in C oder Fortran ausgelagert werden können. Numerische packages wie _Numpy_, die wir in der Wissenschaft verwenden, machen sich dies zu nutze. So erhalten wir die Annehmlichkeit von Python und die Geschwindigkeit von C!\n",
-    "- In diesem Einführungskurs liegt der Fokus auf Aspekten der Programmierung, die in der wissenschaftlichen Anwendung besonders wichtig oder praktisch sind. Python ist jedoch eine beliebte und sehr vielseitige Sprache und wird auch in vielen anderen Bereichen verwendet. Was du hier lernst kannst du bspw. auch zum Schreiben von [Servern](https://www.djangoproject.com), [Webseiten](https://github.com/getpelican/pelican) oder [Spielen](https://www.pygame.org/news) anwenden!"
+    "- Es kann sehr viel schneller gehen ein Python Programm zu schreiben, das tut, was man erwartet, als in vielen anderen Sprachen.\n",
+    "- Ein Python Programm kann recht einfach externen Code in anderen Sprachen aufrufen, sodass rechenintensive Operationen in C oder Fortran ausgelagert werden können. Numerische Packages wie _Numpy_, die wir in der Wissenschaft verwenden, machen sich dies zunutze. So erhalten wir die Annehmlichkeit von Python und die Geschwindigkeit von C!\n",
+    "- In diesem Einführungskurs liegt der Fokus auf Aspekten der Programmierung, die in der wissenschaftlichen Anwendung besonders wichtig oder praktisch sind. Python ist jedoch eine beliebte und sehr vielseitige Sprache und wird auch in vielen anderen Bereichen verwendet. Was du hier lernst, kannst du bspw. auch zum Schreiben von [Servern](https://www.djangoproject.com), [Webseiten](https://github.com/getpelican/pelican) oder [Spielen](https://www.pygame.org/news) anwenden!"
    ]
   },
   {
@@ -121,7 +143,7 @@
    "source": [
     "### Woher kommt der Name _Python_?\n",
     "\n",
-    "Obwohl das Python Logo Schlangen enthält kommt der Name _Python_ ursprünglich von der [Monty Python](http://en.wikipedia.org/wiki/Monty_Python) Comedy Gruppe!\n",
+    "Obwohl das Python-Logo Schlangen enthält, kommt der Name _Python_ ursprünglich von der [Monty Python](http://en.wikipedia.org/wiki/Monty_Python) Comedy Gruppe!\n",
     "\n",
     "![](https://upload.wikimedia.org/wikipedia/en/c/cb/Flyingcircus_2.jpg)\n",
     "\n",
@@ -136,9 +158,11 @@
    "source": [
     "## Feedback und Fragen erwünscht!\n",
     "\n",
-    "Mit Deinem Feedback können wir diesen Kurs verbessern, wovon auch zukünftige DSA-Kurse, die sich an diesem Tutorial orientieren, profitieren. Lass uns gerne (am besten per Mail oder über die myBuB-Plattform) wissen, was Du gut findest, ob Du etwas nicht verstanden hast und was wir besser machen können.\n",
+    "Mit deinem Feedback können wir diesen Kurs verbessern, wovon auch zukünftige DSA-Kurse, die sich an diesem Tutorial orientieren, profitieren. \n",
+    "Lass uns gerne (am besten per Mail oder über die myBuB-Plattform) wissen, was du gut findest, ob du etwas nicht verstanden hast und was wir besser machen können.\n",
     "\n",
-    "Und wenn du Fragen zu einem Thema hast, oder einfach nicht weiterkommst, zögere bitte nicht und wende dich an Laura oder Timo! Es gibt keine \"dummen\" Fragen, und es ist ganz normal, dass Programmieren am Anfang schwer ist!\n"
+    "Und wenn du Fragen zu einem Thema hast, oder einfach nicht weiterkommst, zögere bitte nicht und wende dich an Laura oder Timo!\n",
+    "Es gibt keine \"dummen\" Fragen, und es ist ganz normal, dass Programmieren am Anfang schwer ist!\n"
    ]
   },
   {
@@ -149,7 +173,7 @@
     "\n",
     "Hier geht's zur ersten Lektion:\n",
     "\n",
-    "[**>> 101 - Grundlagen der Programmierung in Python**](101%20-%20Grundlagen%20der%20Programmierung%20in%20Python.ipynb)"
+    "[**>> 101 - Grundlagen der Programmierung in Python**](101_Pythonvariablen.ipynb)"
    ]
   }
  ],
@@ -169,7 +193,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
