--- a/setup.ipynb
+++ b/setup.ipynb
@@ -13,13 +13,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Wenn Du Python selber auf deinem eigenen Rechner installieren möchtest...\n",
+    "# Wenn du Python selber auf deinem eigenen Rechner installieren möchtest...\n",
     "\n",
-    "Programmiercode ist nur Text. Wir speichern reinen Python Code in `.py` Dateien, doch für wissenschaftliche Anwendungen sind solche Skripte häufig nicht anschaulich genug. Stattdessen verwenden wir [_Jupyter Notebooks_](http://jupyter.org), in denen wir nicht nur Code ausführen sondern auch Text, $\\LaTeX$-Gleichungen, Bilder und mehr hinzufügen können. In diesem Kurs wirst du den Umgang mit Notebooks noch kennenlernen, schließlich sind diese Kursmaterialien selbst Jupyter Notebooks!\n",
+    "Programmiercode ist nur Text. \n",
+    "Wir speichern reinen Python Code in `.py` Dateien, doch für wissenschaftliche Anwendungen sind solche Skripte häufig nicht anschaulich genug. \n",
+    "Stattdessen verwenden wir [_Jupyter Notebooks_](http://jupyter.org), in denen wir nicht nur Code ausführen, sondern auch Text, $\\LaTeX$-Gleichungen, Bilder und mehr hinzufügen können. \n",
+    "In diesem Kurs wirst du den Umgang mit Notebooks noch kennenlernen, schließlich sind diese Kursmaterialien selbst Jupyter Notebooks!\n",
     "\n",
-    "Das Jupyter Notebook muss dabei immer auf einen _Kernel_ zurückgreifen können, also eine Python Installation auf dem System. Standardmäßig könnt diesen Kurs einfach auf [lab.ebrains.eu](https://lab.ebrains.eu/) ausführen, wo Python, ein Jupyterserver und alle benätigten Packages schon installiert sind.\n",
+    "Das Jupyter Notebook muss dabei immer auf einen _Kernel_ zurückgreifen können, also eine Python Installation auf dem System.\n",
+    "Standardmäßig könnt diesen Kurs einfach auf [lab.ebrains.eu](https://lab.ebrains.eu/) ausführen, wo Python, ein Jupyterserver und alle benötigten Packages schon installiert sind. \n",
     "\n",
-    "Wenn du willst (das ist aber freiwillig!), kannst Du Python - falls Du das nicht schon gemacht hast - auf deinem eigenen PC installieren. Im Folgendne erklären wir Dir, wie das geht."
+    "Wenn du willst (das ist aber freiwillig!), kannst du Python - falls du das nicht schon gemacht hast - auf deinem eigenen PC installieren. Im Folgenden erklären wir dir, wie das geht."
    ]
   },
   {
@@ -32,12 +36,12 @@
     "\n",
     "### 1. Linux\n",
     "\n",
-    "Die meisten populären Linux-Distributionen (z.B. Ubuntu/Debian,...) haben schon eine vorinstallierte Python-Version. Um die Python-Installation zu verrifizieren, öffne ein Terminal und gebe `python --version` ein. Wenn dir eine halbwegs aktuelle Version (sagen wir mal > 3.6) angezeigt wird, kannst du eigentlich schon loslegen. Für diesen Kurs musst allerdings noch ein paar zusätzliche Packages (=\"Erweiterungen\") installieren (siehe _Diesen Kurs herunterladen und ausführen_).\n",
+    "Die meisten populären Linux-Distributionen (z.B. Ubuntu/Debian,...) haben schon eine vorinstallierte Python-Version. Um die Python-Installation zu verifizieren, öffne ein Terminal und gebe `python --version` ein. Wenn dir eine halbwegs aktuelle Version (sagen wir mal > 3.6) angezeigt wird, kannst du eigentlich schon loslegen. Für diesen Kurs musst du allerdings noch ein paar zusätzliche Packages (=\"Erweiterungen\") installieren (siehe _Diesen Kurs herunterladen und ausführen_).\n",
     "\n",
     "### 2. Alles andere (und evtl auch Linux...)\n",
     "\n",
     "Für alle anderen Fälle empfehlen wir dir, die [Anaconda-Distribution](https://www.anaconda.com/) zu installieren. Das ist sozusagen ein großes Paket, das nicht nur Python selber enthält, sondern auch ganz viele sehr nützliche \"Erweiterungen\" (oder in Python-Speak: Packages). Damit hast du mit einer einzigen Installation alles, was du brauchst abgedeckt!\n",
-    "Anaconda kann auch für Linux-Benutzer:innen interessant sein, die mit einer einzigen Installation alles wichtige installieren wollnen. (Kleiner Hinweis: Anaconda kann von sich aus mit eventuell vorhandenen Python-Installationen und `pip`-Packages umgehen!)\n",
+    "Anaconda kann auch für Linux-Benutzer:innen interessant sein, die mit einer einzigen Installation alles Wichtige installieren wollen. (Kleiner Hinweis: Anaconda kann von sich aus mit eventuell vorhandenen Python-Installationen und `pip`-Packages umgehen!)\n",
     "\n",
     "### 2.1 Anaconda\n",
     "\n",
@@ -50,7 +54,7 @@
     "\n",
     "### 2.2 Miniconda\n",
     "\n",
-    "Anaconda wird eine gigantische Menge an Packages installieren (insgesamt einige GB). Wenn du nicht soo viel Speicherplatz hast und ein bisschen Erfahrung mit der Kommandozeile mitbringst, kannst du auch [Miniconda](https://docs.conda.io/en/latest/miniconda.html) installieren. Das ist sozusagen eine abgespeckte Version von Anaconda, die nur die allerwichtsten Packages enthält. Falls du für Anaconda nicht genug Platz hast aber trotzdem Python installieren willst, melde dich gerne bei uns!"
+    "Anaconda wird eine gigantische Menge an Packages installieren (insgesamt einige GB). Wenn du nicht soo viel Speicherplatz hast und ein bisschen Erfahrung mit der Kommandozeile mitbringst, kannst du auch [Miniconda](https://docs.conda.io/en/latest/miniconda.html) installieren. Das ist sozusagen eine abgespeckte Version von Anaconda, die nur die allerwichtigsten Packages enthält. Falls du für Anaconda nicht genug Platz hast, aber trotzdem Python installieren willst, melde dich gerne bei uns!"
    ]
   },
   {
@@ -59,25 +63,25 @@
    "source": [
     "## Diesen Kurs herunterladen und ausführen\n",
     "\n",
-    "### 1. Kursmaterialien gerunterladen\n",
+    "### 1. Kursmaterialien herunterladen\n",
     "\n",
-    "Möchtest Du den Kurs offline (d.h. lokal auf deinem Rechner) auch durchführen, kannst Du die Notebooks einfach herunterladen. Dafür gibt es verschiedene Möglichkeiten:\n",
+    "Möchtest du den Kurs offline (d.h. lokal auf deinem Rechner) auch durchführen, kannst du die Notebooks einfach herunterladen. Dafür gibt es verschiedene Möglichkeiten:\n",
     "\n",
-    "1. Git: Wenn du weißt, was [`git`](https://de.wikipedia.org/wiki/Git) ist (und/oder) schon Erfahrung im dem Terminal hast, kannst du unser Repo einfach clonen:\n",
+    "1. Git: Wenn du weißt, was [`git`](https://de.wikipedia.org/wiki/Git) ist und/oder schon Erfahrung mit dem Terminal hast, kannst du unser Repo einfach clonen:\n",
     "```bash\n",
     "git clone https://github.com/timomit/dsa-python-course.git\n",
     "```\n",
     "2. Normaler Download: Wenn du mit Punkt 1 nichts anfangen kannst, dann mache Folgendes:\n",
     "  - Gehe auf [https://github.com/timomit/dsa-python-course/](https://github.com/timomit/dsa-python-course/)\n",
-    "  - Klicke auf dne grünen Butten, auf dem \"Code\" steht\n",
+    "  - Klicke auf den grünen Button, auf dem \"Code\" steht\n",
     "  - Wähle im Dropdown-Menü \"Download zip\" aus.\n",
     "  - Speichere den zip-Ordner auf deinem Rechner und entpacke ihn. Fertig!\n",
     "  \n",
     "### 2. Kursmaterialien ausführen.\n",
     "\n",
-    "Wenn du Python mit Anaconda installiert hast, kannst du direkt mit diesemKurs loslegen. Starte die Jupyter Lab App, navigiere in das Kursverzeichnis und öffnet das [`index.ipynb`](index.ipynb) Notebook. Dies ist die Startseite dieses Kurses.\n",
+    "Wenn du Python mit Anaconda installiert hast, kannst du direkt mit diesem Kurs loslegen. Starte die Jupyter Lab App, navigiere in das Kursverzeichnis und öffnet das [`index.ipynb`](index.ipynb) Notebook. Dies ist die Startseite dieses Kurses.\n",
     "\n",
-    "> Wenn Du nicht die Anaconda Distribution verwendest, stelle sicher, dass Du die benötigten Packages für diesen Kurs installiert habst. Sie sind in der `requirements.txt` Datei aufgelistet und ihr könnt sie einfach mit `pip` installieren:\n",
+    "> Wenn Du nicht die Anaconda Distribution verwendest, stelle sicher, dass Du die benötigten Packages für diesen Kurs installiert hast. Sie sind in der `requirements.txt` Datei aufgelistet und ihr könnt sie einfach mit `pip` installieren:\n",
     ">\n",
     "> ```bash\n",
     "> pip install -r requirements.txt\n",
@@ -94,7 +98,7 @@
     "\n",
     "Um eure Python Installation zu testen, kannst Du die _Python Shell_ öffnen, indem ihr in der Kommandozeile einfach `python` ausführt. Hier kannst Du Python Code schreiben und direkt ausführen. Versucht's mal mit `print(\"Hello World!\")`. In der Shell kannst Du testen, ob Packages wie `numpy`, `matplotlib` und `scipy` installiert sind, indem Du sie mit `import` versuchst zu importieren. Du verlässt die Shell mit `exit()`.\n",
     "\n",
-    "Natürlich eignet sich die Shell nicht für ernsthaftes Programmieren. Für Skripte oder größere Programme, die Aufgaben ausführen sollen, schreiben wir den Code daher in `.py` Textdateien. Ein guter Texteditor wie [Microsoft's Visual Studio Code](https://code.visualstudio.com/), oder die sehr mächtigen Klassiger [Emacs](https://www.gnu.org/software/emacs/) bzw. [Vim](https://www.vim.org/) oder sogar eine vollwertige Entwicklungsumgebung wie [PyCharm](https://www.jetbrains.com/pycharm/) oder [Spyder](https://pythonhosted.org/spyder/) ist dabei essentiell.\n",
+    "Natürlich eignet sich die Shell nicht für ernsthaftes Programmieren. Für Skripte oder größere Programme, die Aufgaben ausführen sollen, schreiben wir den Code daher in `.py` Textdateien. Ein guter Texteditor wie [Microsoft's Visual Studio Code](https://code.visualstudio.com/), oder die sehr mächtigen Klassiker[Emacs](https://www.gnu.org/software/emacs/) bzw. [Vim](https://www.vim.org/) oder sogar eine vollwertige Entwicklungsumgebung wie [PyCharm](https://www.jetbrains.com/pycharm/) oder [Spyder](https://pythonhosted.org/spyder/) ist dabei essenziell.\n",
     "\n",
     "Erstellt eine Datei `helloworld.py` mit dem Inhalt `print(\"Hello World!\")`. Nun könnt ihr das Skript in der Kommandozeile ausführen:\n",
     "\n",
@@ -106,7 +110,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "[Startseite](index.ipynb) | [**>> 101 - Grundlagen der Programmierung in Python**](101%20-%20Grundlagen%20der%20Programmierung%20in%20Python.ipynb)"
+    "[Startseite](index.ipynb) | [**>> 101 - Grundlagen der Programmierung in Python**](101_Pythonvariablen.ipynb)"
    ]
   }
  ],
@@ -126,7 +130,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
