Improved orthography, added info on binary system
... and went back to .format instead of f-strings

--- a/101_Pythonvariablen.ipynb
+++ b/101_Pythonvariablen.ipynb
@@ -20,6 +20,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "TODO: passe alle links hier an!\n",
     "- [Aufgabe 1 - Werte und Typen](#Aufgabe-1---Werte-und-Typen)\n",
     "- [Strings](#Strings)\n",
     "- [Aufgabe 2 - Strings und Dokumentation](#Aufgabe-2---Strings-und-Dokumentation)\n",
@@ -36,9 +37,12 @@
    "source": [
     "## Über Variablen\n",
     "\n",
-    "Pythoncode besteht aus einer Aneinanderreihung von *Befehlen*, die der sogenannte Python-Interpreter _nacheinander_ ausführt. Mit anderen Worten geht der Interpreter Zeile für Zeile durch ein Python-Script oder, wie in unserem Fall, durch eine Jupyter-Codezelle und übersetzt das, was in der jeweiligen Zeile steht in elementare \"Operationen\", die dann auf der CPU ausgeführt werden können.\n",
+    "Pythoncode besteht aus einer Aneinanderreihung von *Befehlen*, die der sogenannte Python-Interpreter _nacheinander_ ausführt. Mit anderen Worten geht der Interpreter Zeile für Zeile durch ein Python-Script oder, wie in unserem Fall, durch eine Jupyter-Codezelle und übersetzt das, was in der jeweiligen Zeile steht, in elementare \"Operationen\", die dann auf der CPU ausgeführt werden können.\n",
     "\n",
-    "Ein solcher Befehl ist die Zuweisung eines Wertes zu einer **Variablen**. Dabei übersetzt der Interpreter den Wert der Variablen in Nullen und Einsen und schreibt diese an einen Ort im Arbeitsspeicher. Und gleichzeitig bekommt der Ort einen Namen, den wir uns Menschen gut merken können, damit wir später wieder auf diese Variable zugreifen können.\n",
+    "Ein solcher Befehl ist die Zuweisung eines Wertes zu einer **Variablen**. Dabei übersetzt der Interpreter den Wert der Variablen in Nullen und Einsen (wir nennen das _binäre Darstellung_) und schreibt diese an einen Ort im Arbeitsspeicher.\n",
+    "Eine mögliche Übersetzung von der natürlichen Zahl 42 in das Binärsystem ist `0010 1010`, die Codierung des \"A\" (nach [ACSII](https://de.wikipedia.org/wiki/American_Standard_Code_for_Information_Interchange) `0010 0001`.\n",
+    "Und gleichzeitig bekommt der Ort einen Namen, den wir uns Menschen gut merken können, damit wir später wieder auf diese Variable zugreifen können.\n",
+    "\n",
     "\n",
     "Im unteren Beispiel weisen wir der Variablen mit dem Namen `x` den Wert `1` zu."
    ]
@@ -49,7 +53,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = 1\n",
+    "x = 42\n",
     "# Diese Zelle auswählen und mit `<SHIFT> + <ENTER>` ausführen.\n",
     "# Der letzte Rückgabewert der Zelle wird dann unten ausgegeben,\n",
     "# hier also der Wert von `x`:\n",
@@ -82,7 +86,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(Guter) Code besteht nicht nur aus Befehlen, sondern auch auch Kommentaren. Das ist Text in deinem Code, der vom Interpreter übersprungen wird. Das ist ganz nützlich, um z.B. in menschlicher Sprache zu beschreiben, was im Code passiert. Oder einfach um zu Testzwecken Codezeilen zu deaktivieren.\n",
+    "(Guter) Code besteht nicht nur aus Befehlen, sondern auch aus Kommentaren. Das ist Text in deinem Code, der vom Interpreter übersprungen wird. Das ist ganz nützlich, um z.B. in menschlicher Sprache zu beschreiben, was im Code passiert. Oder einfach, um zu Testzwecken Codezeilen zu deaktivieren.\n",
     "\n",
     "In Python werden Kommentare mit einer Raute (`#`) gekennzeichnet. Alles, was in der Zeile nach dem `#` kommt, wird vom Interpreter übersprungen."
    ]
@@ -102,9 +106,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Damit der Interpreter weiß, wie er einen Wert in Nullen und Einsen übersetzen muss (oder umgekehrt, wie er eine bestimmte Kombination von Nullen und Einsen interpreteren soll), haben Variablen immer einen sogenannten **Datentyp**. Dabei gibt es zum Beispiel:\n",
+    "Damit der Interpreter weiß, wie er einen Wert in Nullen und Einsen übersetzen muss (oder umgekehrt, wie er eine bestimmte Kombination von Nullen und Einsen interpretieren soll), haben Variablen immer einen sogenannten **Datentyp**. \n",
+    "Häufige Datentypen sind:\n",
     "\n",
-    "- `int` für ganze Zahlen (englisch: _integer_), z.B. `1`, `42`, `-10`,\n",
+    "- `int` für ganze Zahlen (englisch: _integer_), z.B. `1`, `42`, `-10`, \n",
     "- `float` für Fließkommazahlen, z.B. `0.5`, `3.14`, `1e10`,\n",
     "- `str` für Zeichenketten (_Strings_), z.B. `\"Hello World!\"`,\n",
     "- `boolean` für Wahrheitswerte (_Booleans_), also `True` und `False`\n",
@@ -461,17 +466,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Die meisten \"Dinge\" in Python sind **Objekte**, d.h. neben ihrem Typ besitzen sie assoziierte **Attribute** und **Methoden**, auf die über einen Punkt `.` zugegriffen werden kann. Neben Strings sind bspw. auch Werte der anderen schon bekannten Datentypen wie `int(5)` und sogar Funktionen und die Datentypen selbst Objekte.\n",
+    "Die meisten \"Dinge\" in Python sind **Objekte**, d.h. neben ihrem Typ besitzen sie assoziierte **Attribute** und **Methoden**, auf die über einen Punkt `.` zugegriffen werden kann.\n",
+    "Neben Strings sind bspw. auch Werte der anderen schon bekannten Datentypen wie `int(5)` und sogar Funktionen und die Datentypen selbst Objekte.\n",
     "\n",
-    "Objekte sind die zentralen Bestandteile des _Objektorientierten Programmieren_ (kurz OOP). Eine andere Art, Programme zu designen, ist das _funktionale Programmieren_. Was Funktionen genau sind, werden werden wir später noch diskutieren (aber ein paar kennst du schon: z.B. `type()`, `print()` oder `len()`).\n",
+    "Objekte sind die zentralen Bestandteile des _objektorientierten Programmieren_ (kurz OOP).\n",
+    "Eine andere Art, Programme zu designen, ist das _funktionale Programmieren_.\n",
+    "Was Funktionen genau sind, werden wir später noch diskutieren (aber ein paar kennst du schon: z.B. `type()`, `print()` oder `len()`).\n",
     "\n",
-    "Über OOP allein könnte man wahrscheinlich etliche DSA-Kurse abhalten, daher behandeln wir sie hier nur ganz kurz. Im Wesentlichen ist ein Objekt eine Art Variable, die ihrerseits aus \"versteckten\" Variablen zusammengesetzt ist. Diese \"versteckten\" Variablen nennen wir _Attribute_. _Methoden_ wiederum sind Befehle, die etwas mit einem Objekt machen können, d.h. sie können auf die Attribute zugreifen, diese auslesen, sie verändern und mit ihnen rechnen. Die Syntax für Methoden ist: `object.method()`, d.h. die Methode wirkt auf das Objekt vor dem Punkt.\n",
+    "Über OOP allein könnte man wahrscheinlich etliche DSA-Kurse abhalten, daher behandeln wir sie hier nur ganz kurz.\n",
+    "Im Wesentlichen ist ein Objekt eine Art Variable, die ihrerseits aus \"versteckten\" Variablen zusammengesetzt ist.\n",
+    "Diese \"versteckten\" Variablen nennen wir _Attribute_.\n",
+    "_Methoden_ wiederum sind Befehle, die etwas mit einem Objekt machen können, d.h. sie können auf die Attribute zugreifen, diese auslesen, sie verändern und mit ihnen rechnen.\n",
+    "Die Syntax für Methoden ist: `object.method()`, d.h. die Methode wirkt auf das Objekt vor dem Punkt.\n",
     "\n",
     "Eine _Klasse_ wiederum fasst alle Objekte einer bestimmten Sorte zusammen und definiert damit, welche Attribute ein Objekt hat und welche Methoden darauf angewendet werden können.\n",
     "\n",
-    "Alles klar soweit? Ok, das war ein bisschen viel auf einmal! Deshalb ein anschauliches Beispiel:\n",
+    "Alles klar so weit?\n",
+    "Ok, das war ein bisschen viel auf einmal! Deshalb ein anschauliches Beispiel:\n",
     "\n",
-    "Nehmen wir die Klasse `Hund`. Ein Hund könnte z.B. die Attribute `name`, `fellfarbe` und `x`- und `y` Koordinaten (Hunde rennen ja bekanntlichermaßen viel, und daher ist es ganz praktisch zu wissen, wo sie sind...) haben. Eine mögliche Methode wäre z.b. `.lauf()`.\n",
+    "Nehmen wir die Klasse `Hund`.\n",
+    "Ein Hund könnte z.B. die Attribute `name`, `fellfarbe` und `x`- und `y` Koordinaten (Hunde rennen ja bekanntermaßen viel, und daher ist es ganz praktisch zu wissen, wo sie sind...) haben. Eine mögliche Methode wäre z.b. `.lauf()`.\n",
     "\n",
     "In Python könnte das dann so aussehen (**Hinweis:** Da wir keine echte Hundeklasse implementiert haben, funktioniert die unsere Zelle natürlich nicht!)"
    ]
@@ -495,10 +509,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Im Moment müsst ihr noch nicht genau verstehen, wie Objekte im Python funktionieren. Es ist nur ganz hilfreich zu wissen, _dass_ es Objekte in Python gibt, und wie wir Methoden darauf anwenden können.\n",
+    "Im Moment müsst ihr noch nicht genau verstehen, wie Objekte im Python funktionieren. \n",
+    "Es ist nur ganz hilfreich zu wissen, _dass_ es Objekte in Python gibt, und wie wir Methoden darauf anwenden können.\n",
     "\n",
     "---\n",
-    "Wie schon gesagt: Strings sind Objekte und haben damit interne Attribute und Methoden. Eine nützliche Methoden sind z.B."
+    "Wie schon gesagt: \n",
+    "Strings sind Objekte und haben damit interne Attribute und Methoden. \n",
+    "Einige nützliche Methoden sind z.B."
    ]
   },
   {
@@ -625,9 +642,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### String-Formatierung mit f-Strings\n",
+    "### String-Formatierung\n",
     "\n",
-    "f-strings sind mega praktisch, wenn wir Text ud Zahlen kombinieren wollen. "
+    "Eine wichtige Methode ist `str.format()`, die markierte Platzhalter im String mit Werten ersetzt, die der Methode übergeben werden:"
    ]
   },
   {
@@ -638,19 +655,22 @@
    "source": [
     "x = 10\n",
     "y = 3.1415\n",
-    "print(f\"Der Wert von x ist {x} und Pi ist ungefähr {y}\")\n",
+    "print(\"Der Wert von x ist {} und Pi ist ungefähr {}\".format(x, y))\n",
     "\n",
     "name1 = \"Anna\"\n",
     "name2 = \"Bob\"\n",
-    "print(f\"Hallo {name1} und {name2}!\")"
+    "print(\"Hallo {} und {}!\".format(name1, name2))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ein Platzhalter wird durch eine öffnende `{` und schließende `}` geschweifte Klammer begrenzt. \n",
-    "> **Hinweis:** Außerdem kann man Zahlen formatieren. Wie das funktioniert, siehst Du in der offiziellen [Python-Dokumentation](https://docs.python.org/3/reference/lexical_analysis.html#f-strings) oder auf [Realpython](https://realpython.com/python-string-formatting/#3-string-interpolation-f-strings-python-36)."
+    "> **Hinweis:** Außerdem kann man Zahlen formatieren. Wie das funktioniert, siehst Du in der offiziellen [Python-Dokumentation]() oder [hier](https://pyformat.info/).\n",
+    "\n",
+    "> **Noch ein Hinweis:** Seit Python 3.6 gibt es noch eine Variante, die viel besser lesbar ist: \n",
+    "Die sogenanneten [\"f-strings\"](https://docs.python.org/3/reference/lexical_analysis.html#f-strings). \n",
+    "Wie sie im Vergleich zu `.format()` funktionieren, wird in diesem [Tutorial auf realpython.com](https://realpython.com/python-string-formatting/#3-string-interpolation-f-strings-python-36) erklärt."
    ]
   },
   {
@@ -659,7 +679,7 @@
    "source": [
     "### Aufgabe 3 - String Formatierung\n",
     "\n",
-    "Schreibe deinen Namen in die Variable `name`. Verwende f-strings um aus `s` und `name` den Gruß `\"Hello World, mein Name ist __DEIN_NAME__!\"` zusammenzusetzen. Weise den zusammengesetzten String der Variable `greeting` zu."
+    "Schreibe deinen Namen in die Variable `name`. Verwende `.format()` um aus `s` und `name` den Gruß `\"Hello World, mein Name ist __DEIN_NAME__!\"` zusammenzusetzen. Weise den zusammengesetzten String der Variable `greeting` zu."
    ]
   },
   {
@@ -715,7 +735,9 @@
    "source": [
     "## Listen und Tupel\n",
     "\n",
-    "Während Strings einzelne Zeichen aneinanderreihen, repräsentieren **Listen** und **Tupel** eine Reihe _beliebiger_ Werte. Die Elemente einer Liste können verändert werden, während ein Tupel unveränderlich ist. Wir können Listen erstellen, indem wir die Elemente durch Kommata getrennt in eckigen Klammern `[` und `]` angeben, und Tupel durch die Verwendung runder Klammern `(` und `)`:"
+    "Während Strings einzelne Zeichen aneinanderreihen, repräsentieren **Listen** und **Tupel** eine Reihe _beliebiger_ Werte. \n",
+    "Die Elemente einer Liste können verändert werden, während ein Tupel unveränderlich ist. \n",
+    "Wir können Listen erstellen, indem wir die Elemente durch Kommata getrennt in eckigen Klammern `[` und `]` angeben, und Tupel durch die Verwendung runder Klammern `(` und `)`:"
    ]
   },
   {
@@ -902,7 +924,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> **Hinweis:** Slicing ist ein mächtiges Werkzeug um kurzen, prägnanten Code zu schreiben und wird dir bei der Arbeit mit _Numpy Arrays_ ab Lektion [201 - Numerik mit Numpy](201 - Numerik mit Numpy.ipynb) noch sehr häufig begegnen."
+    "> **Hinweis:** Slicing ist ein mächtiges Werkzeug um kurzen, prägnanten Code zu schreiben und wird dir bei der Arbeit mit _Numpy Arrays_ ab Lektion [201 - Numerik mit Numpy](201 - Numerik mit Numpy.ipynb) noch sehr häufig begegnen. TODO: evtl. Link anpassen!"
    ]
   },
   {
@@ -1095,11 +1117,14 @@
    "source": [
     "---\n",
     "\n",
-    "Du kannst nun mit Variablen und Datentypen umgehen und den Python Interpreter rechnen lassen. Lerne in der nächsten Lektion, wie du mit _Control Flow_ Anweisungen deine ersten Programme schreiben kannst.\n",
+    "Du kannst nun mit Variablen und Datentypen umgehen und den Python Interpreter rechnen lassen. \n",
+    "Lerne in der nächsten Lektion, wie du mit _Control Flow_ Anweisungen deine ersten Programme schreiben kannst.\n",
     "\n",
-    "> **Tipp**: Erstelle als kleine Übung dein eigenes \"Python-Cheatsheat\", wo die wichtigsten Python-Befehle für dich zusammenfasst. Es gibt zwar bestimmt schon hunderte Cheatcheats fertig im Internet zum Herunterladen. Aber du lernst viel mehr dabei, wenn du dir selber eins erstellst! Und du kannst es dann in den nächsten Lektionen noch weiter ausbauen! :)\n",
+    "> **Tipp**: Erstelle als kleine Übung dein eigenes \"Python-Cheatsheat\", in dem du die wichtigsten Python-Befehle für dich zusammenfasst. \n",
+    "Es gibt zwar bestimmt schon hunderte Cheatcheats fertig im Internet zum Herunterladen. \n",
+    "Aber du lernst viel mehr dabei, wenn du dir selber eins erstellst! Und du kannst es dann in den nächsten Lektionen noch weiter ausbauen! :)\n",
     "\n",
-    "[Startseite](index.ipynb) | [**>> 102 - Control Flow**](102%20-%20Control%20Flow.ipynb)"
+    "[Startseite](index.ipynb) | [**>> 102 - Control Flow**](102_controlflow.ipynb)"
    ]
   }
  ],
