changed value for x from 1 to 42

--- a/101_Pythonvariablen.ipynb
+++ b/101_Pythonvariablen.ipynb
@@ -40,11 +40,11 @@
     "Pythoncode besteht aus einer Aneinanderreihung von *Befehlen*, die der sogenannte Python-Interpreter _nacheinander_ ausführt. Mit anderen Worten geht der Interpreter Zeile für Zeile durch ein Python-Script oder, wie in unserem Fall, durch eine Jupyter-Codezelle und übersetzt das, was in der jeweiligen Zeile steht, in elementare \"Operationen\", die dann auf der CPU ausgeführt werden können.\n",
     "\n",
     "Ein solcher Befehl ist die Zuweisung eines Wertes zu einer **Variablen**. Dabei übersetzt der Interpreter den Wert der Variablen in Nullen und Einsen (wir nennen das _binäre Darstellung_) und schreibt diese an einen Ort im Arbeitsspeicher.\n",
-    "Eine mögliche Übersetzung von der natürlichen Zahl 42 in das Binärsystem ist `0010 1010`, die Codierung des \"A\" (nach [ACSII](https://de.wikipedia.org/wiki/American_Standard_Code_for_Information_Interchange) `0010 0001`.\n",
+    "Eine mögliche Übersetzung von der natürlichen Zahl 42 in das Binärsystem ist `0010 1010`, die Codierung des \"1 zuA\" (nach [ACSII](https://de.wikipedia.org/wiki/American_Standard_Code_for_Information_Interchange) `0010 0001`.\n",
     "Und gleichzeitig bekommt der Ort einen Namen, den wir uns Menschen gut merken können, damit wir später wieder auf diese Variable zugreifen können.\n",
     "\n",
     "\n",
-    "Im unteren Beispiel weisen wir der Variablen mit dem Namen `x` den Wert `1` zu."
+    "Im unteren Beispiel weisen wir der Variablen mit dem Namen `x` den Wert `42` zu."
    ]
   },
   {
