Repaired broken sentence at in 3rd cell

--- a/101_Pythonvariablen.ipynb
+++ b/101_Pythonvariablen.ipynb
@@ -40,7 +40,7 @@
     "Pythoncode besteht aus einer Aneinanderreihung von *Befehlen*, die der sogenannte Python-Interpreter _nacheinander_ ausführt. Mit anderen Worten geht der Interpreter Zeile für Zeile durch ein Python-Script oder, wie in unserem Fall, durch eine Jupyter-Codezelle und übersetzt das, was in der jeweiligen Zeile steht, in elementare \"Operationen\", die dann auf der CPU ausgeführt werden können.\n",
     "\n",
     "Ein solcher Befehl ist die Zuweisung eines Wertes zu einer **Variablen**. Dabei übersetzt der Interpreter den Wert der Variablen in Nullen und Einsen (wir nennen das _binäre Darstellung_) und schreibt diese an einen Ort im Arbeitsspeicher.\n",
-    "Eine mögliche Übersetzung von der natürlichen Zahl 42 in das Binärsystem ist `0010 1010`, die Codierung des \"1 zuA\" (nach [ACSII](https://de.wikipedia.org/wiki/American_Standard_Code_for_Information_Interchange) `0010 0001`.\n",
+    "Eine mögliche Übersetzung von der natürlichen Zahl 42 in das Binärsystem ist `0010 1010`, die Codierung des Buchstabens \"A\" ist `0010 0001` (nach dem [ACSII-Standard](https://de.wikipedia.org/wiki/American_Standard_Code_for_Information_Interchange)).\n",
     "Und gleichzeitig bekommt der Ort einen Namen, den wir uns Menschen gut merken können, damit wir später wieder auf diese Variable zugreifen können.\n",
     "\n",
     "\n",
@@ -118,7 +118,7 @@
     "\n",
     "**Gut zu wissen:** In Python (im Gegensatz zu manch anderen Programmiersprachen wie z.B. C) sind Variablen dynamisch typisiert. Das heißt, dass der Interpreter automatisch erkennt, welche Datentypen man verwendet und den Typ einer Variablen entsprechend anpasst.\n",
     "\n",
-    "**Hinweis** Mit der Funktion `type` kann man sich ausgeben lassen, welcher Datentyp eine Variable hat"
+    "**Hinweis:** Mit der Funktion `type` kann man sich ausgeben lassen, welcher Datentyp eine Variable hat"
    ]
   },
   {
@@ -669,8 +669,8 @@
     "> **Hinweis:** Außerdem kann man Zahlen formatieren. Wie das funktioniert, siehst Du in der offiziellen [Python-Dokumentation]() oder [hier](https://pyformat.info/).\n",
     "\n",
     "> **Noch ein Hinweis:** Seit Python 3.6 gibt es noch eine Variante, die viel besser lesbar ist: \n",
-    "Die sogenanneten [\"f-strings\"](https://docs.python.org/3/reference/lexical_analysis.html#f-strings). \n",
-    "Wie sie im Vergleich zu `.format()` funktionieren, wird in diesem [Tutorial auf realpython.com](https://realpython.com/python-string-formatting/#3-string-interpolation-f-strings-python-36) erklärt."
+    "Die sogenannten [\"f-strings\"](https://docs.python.org/3/reference/lexical_analysis.html#f-strings). \n",
+    "Wie sie im Vergleich zu `.format()` funktioniert, wird in diesem [Tutorial auf realpython.com](https://realpython.com/python-string-formatting/#3-string-interpolation-f-strings-python-36) erklärt."
    ]
   },
   {
